# FlannSharp

./: .gitignore  FlannSharp.sln  RELEASE_NOTES.md  buildnative.cmd  buildnative.sh  buildnativelocal.cmd  paket.dependencies
.config/: dotnet-tools.json
.github/workflows/: publish.yml
src/Demo/: Demo.fsproj  Program.fs  paket.references
src/Flann/: Flann.fs  Flann.fsproj  paket.template
src/FlannNative/: CMakeLists.txt  FlannNative.cpp  FlannNative.h
